# eap-patterns

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
python/: convertPIO.py  pio.py
src/: binReader.f90  clone_lib.f90  clone_reduce.f90  define_kind.f90  derivatives_common_template.f90  fakemesh.f90  fileUtils.c  main.F90  mem_release.f90  mesh_types.f90  tests.f90  util.f90
